# realworld-axum-sqlx

./: .env.sample  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
migrations/: 1_setup.sql  2_user.sql  3_follow.sql  4_article.sql  README.md
src/: config.rs  lib.rs  main.rs
src/http/: articles.rs  error.rs  extractor.rs  mod.rs  profiles.rs  types.rs  users.rs
src/http/articles/: comments.rs  listing.rs  mod.rs
